add config parser

--- a/settings.ini
+++ b/settings.ini
@@ -3,7 +3,7 @@ USER_EMOJI = [':smiley_cat:', ':smiling_imp:', ':panda_face:', ':dog:']
 
 [Logging]
 ;Format = r'%(name)s - %(levelname)s - %(message)s'
-Filename = 'bot.log'
+Filename = bot.log
 Loglevel = INFO
 CRITICAL = 50
 FATAL = 50
